# svelteui

./: .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  CHECKLIST.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_KR.md  CONTRIBUTING.md  CONTRIBUTING_KR.md  README.md  commitlint.config.cjs  eslint.config.js  package-lock.json  package.json  turbo.json
.changeset/: config.json
.config/: cz-config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  main.yml  publish.yml
.husky/: pre-commit  pre-push
.svelte-kit/: tsconfig.json
apps/docs/: .gitignore  README.md  jsconfig.json  package-lock.json  package.json  postcss.config.cjs  pre-release.md  prepare.ts  svelte-docs.config.js  svelte.config.js  tailwind.config.cjs  vite.config.js
apps/web/: package.json
cli/: .gitignore  Cargo.toml  README.md  poem.txt
cli/src/: lib.rs  main.rs
cli/src/core/: config.rs  mod.rs
cli/src/tests/: config.rs
configuration/storybook/: main.cjs  (+3 more)
docs/: .gitignore  .prettierrc  LICENSE  README.md  decs.d.ts  jsconfig.json  mdsvex.config.js  next.config.js  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  svelte-docs.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
new-docs/: .prettierrc  package-lock.json  package.json  svelte.config.js
patches/: @stitches+core+1.2.8.patch
scripts/: README.md  bump.ts  generate-types.ts  pre-release.ts  test-script.ts  types.ts
wiki/: Roadmap.md
(+1093 files in other folders)
